--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@middy/core": "^1.5.0",
     "@middy/http-json-body-parser": "^1.5.0",
-    "source-map-support": "^0.5.19"
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.0",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^27.0.5"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
