--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,20 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "ESNext",
-    "outDir": "lib"
+    "target": "ES6",
+    "esModuleInterop": true,
+    "module": "CommonJS",
+    "outDir": "lib",
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
     ".webpack/**/*",
     "_warmup/**/*",
     ".vscode/**/*"
-  ]
+  ],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
