--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@middy/core": "^1.5.0",
     "@middy/http-json-body-parser": "^1.5.0",
+    "@middy/validator": "^2.5.1",
     "@types/jest": "^27.0.1",
     "jest": "^27.1.0",
+    "pg": "^8.7.1",
     "source-map-support": "^0.5.19",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
