--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest"
+    "test": "../node_modules/.bin/jest"
   },
   "dependencies": {
     "@middy/core": "^1.5.0",
