--- a/import-service/package.json
+++ b/import-service/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "@types/jest": "^27.0.1",
+    "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.991.0",
     "csv-parser": "^3.0.0",
-    "source-map-support": "^0.5.19"
+    "jest": "^27.2.0",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^27.0.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
@@ -22,7 +27,6 @@
     "@types/node": "^14.14.25",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
-    "serverless-dotenv-plugin": "^3.9.0",
     "serverless-offline": "^8.2.0",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^8.0.15",
