--- a/import-service/tsconfig.json
+++ b/import-service/tsconfig.json
@@ -7,9 +7,10 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "ES2020",
+    "target": "ES6",
+    "esModuleInterop": true,
+    "module": "CommonJS",
     "outDir": "lib",
-    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
