--- a/bff-service/.ebextensions/options.config
+++ b/bff-service/.ebextensions/options.config
@@ -1,6 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    PORT: 8081
     NODE_ENV: 'production'
-    PRODUCT: 'https://31zjtpybn2.execute-api.eu-west-1.amazonaws.com/dev/products'
+    PRODUCTS: 'https://31zjtpybn2.execute-api.eu-west-1.amazonaws.com/dev/products'
     CART: 'https://hk1hf78leb.execute-api.eu-west-1.amazonaws.com/dev/api/profile/cart'
