--- a/bff-service/.env.example
+++ b/bff-service/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
 PRODUCTS=https://31zjtpybn2.execute-api.eu-west-1.amazonaws.com/dev/products
-CART=http://gmazur92.eu-west-1.elasticbeanstalk.com/api
+CART=https://hk1hf78leb.execute-api.eu-west-1.amazonaws.com/dev/api/profile/cart
